Setup All modules reviewed and Updated except Review Pg.

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,33 +4,350 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vrt.testcases.LoginTest</td>
+<td>com.vrt.testcases.setup_QualParametersTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LOGIN_001b</td>
+<td>QP018A</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LOGIN_001</td>
+<td>QP035</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>LOGIN_022</td>
+<td>QP033</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP038</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP039</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP036</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP037</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP030A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP011</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP010_1</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP031</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP016B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP016C</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP028A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP009</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP007</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP034</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP045</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP001</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP046</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP002</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP043</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP044</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP005</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP006</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP030</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP047</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP003</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP048</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP004</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP002_1</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP041</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP042</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP040</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP027B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP027A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP019</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP056</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP012</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP034A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP057</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP013</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP054</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP010</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP055</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP014A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP017</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP058</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP015</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP052</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP053</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP014B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP014C</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP018B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP018C</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP032A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP060</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP029</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP032</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP023</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP016A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP024</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP021</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP028</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP022</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP025</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP026</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>QP020</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>PreSetUp</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -48,8 +365,4 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>endReport</td>
-<td>&nbsp;</td></tr>
 </table>
