--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,69 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP028A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP02A8-Verify that Decimal numbers are not accepted in the time field in HH MM SSHH MM SS text boxes for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP030<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP030-Verify the invalid values for HH in time field for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP031<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP031-Verify that min 00 and max 59 is accepted in MM field for Cycle time option</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP023<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP023-Verify that on-click of the _Cycle Time_ option in the list, will display the time fields for Stop Qual</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP016B<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP016B-Do not enter anything in MM field and click on any other field or anywhere in the screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP016C<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i> QP016C-Enter more than max value in MM field and click on any other field or anywhere in the screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP016A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP016A-Verify the invalid values for MM in time field for time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP032A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP032A-Verify the negative value for MM field in time field for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP035<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP035-Verify that a validation message is displayed when cycle time is given less than the selected sampling rate</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP032<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP032-Verify the invalid values for MM in time field for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP033<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP033-Verify that min 00 and max 59 is accepted in SS field for Cycle time option</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP010_1<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP010_1-Verify that max 2 characters are allowed in HH MM SS time fields for time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP038<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP038-Verify if the application provides sampling rate Drop down list in Minutes as  1, 2, 3, 5, 10</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP039<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP039-Verify that the default value for Transaction Rate is 10 sec</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP036<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP036-Verify that the default value for Sampling Rate is 5 sec</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP037<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP036-Verify that the default value for Sampling Rate is 10 sec</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP002_1<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP002.1-Verify if the ‘Start Qualification’ drop down option displays ‘Manual’ as the default selection</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP041<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP041-Verify that for 2 sec SR, the TR values in drop down are 6,8 and 10 sec and 8 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP042<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP042-Verify that for 3 sec SR, the TR values in drop down are 6,9 and 12 sec and 9 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP040<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP040-Verify that for 1 sec SR, the TR values in drop down are 3,4 and 5 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP034<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP034-Verify the invalid values for SS in time field for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP027B<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP027B-Verify that max 2 characters are allowed in SS  time fields for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP027A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP027A-Verify that max 2 characters are allowed in MM and SS  time fields for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP007<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP007-Verify that the Date selector is available for start qual-time of the day option</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP046<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP046-Verify that for 30 sec SR, the TR values in drop down are 10,20 and 30 sec and 10 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP002<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP002-Verify that the Start and Stop Qual drop downs are displayed under _Start Stop Conditions_ section</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP043<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP043-Verify that for 5 sec SR, the TR values in drop down are 5,10 and 20 sec and 10 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP044<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP044-Verify that for 10 sec SR, the TR values in drop down are 10,20 and 30 sec and 20 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP005<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP005-Verify that on-click of the _Time of the Day_ option in the list, will display the date and time fields for Start Qual</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP006<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP006-Verify that the Date field for Start Qual displays the current date</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP047<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP047-Verify that for 1 min SR, the TR values in drop down are 10,20 and 30 sec and 20 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP003<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP003-Verify that _Manual_ and _Time of the day_ options are displayed in Start Qualification drop down</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP048<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP048-Verify that for 2 mins SR, the TR values in drop down are 10,20 and 30 sec and 20 sec is selected by default             </i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP004<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP004-Verify that on-click of the _Manual_ option in the list, will display the Start Qual as Manual</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP009<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP009-Verify that the time field has three text boxes for Hours,Minutes and Seconds under time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP052<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP052-Verify the drop down values for Active.Inactive field under RF Transmit Threshold section</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP018B<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP018B-Do not enter anything in MM field and click on any other field or anywhere in the screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP053<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP053-Verify that on-click on the Review navigator on th top right will navigate to Review screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP045<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP045-Verify that for 20 sec SR, the TR values in drop down are 10,20 and 30 sec and 20 sec is selected by default</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP001<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP001-Verify the details displayed in Qualification Parameters screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP034A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP034A-Verify the negative value in SS time field for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP014C<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP014C-enter decimal value  in HH field and click on any other field or anywhere in the screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP014A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP014A-Verify the invalid values for HH in time field for time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP018C<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP018C-Enter more than max value in SS field and click on any other field or anywhere in the screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP018A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP018-Verify the invalid values for SS in time field for time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP014B<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP014B-Do not enter anything in HH field and click on any other field or anywhere in the screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP019<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP019-Verify that validation message is displayed when elapsed time is entered in time of the day field and proceeded to next step</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP030A<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP030A-Verify the negative value for HH field for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP057<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP057-Verify that on-click of home btn in bottom menu options is navigated to main hub page</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP013<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP013-Verify that min 00 and max 23 is accepted in HH field for time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP054<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP054-Verify that on-click of the Calculations navigator on the top left will navigate to Calculations screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP010<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP010-Verify that the default value for time is 00 in all the three text boxes for time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP011<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP011-Verify that only numbers are accepted in the time field in HH MM SS text boxes for time of the day</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP055<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP055-Verify that on-click of the back icon on the screen will navigate to Asset details screen upon confirmation</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP017<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP017-Verify that min 00 and max 59 is accepted in SS field for time of the day option</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP058<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP058-Verify that on-click of help btn in bottom menu options displays information about the Qualification parameters screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP015<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP015-Verify that min 00 and max 59 is accepted in MM field for time of the day option</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP060<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP060 - Verify that on-click of About btn in bottom menu options displays the software version and the console IP address</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP020<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP020-Verify if the ‘Stop Qualification’ drop down option displays ‘Manual’ as the default selection.</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP056<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP056-Verify the bottom menu options displayed in Qualification Parameters screen</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP029<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP029-Verify that min 0000 and max 9999 hrs are allowed in HH field of Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP024<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP024-Verify that the time field has three text boxes for Hours,Minutes and Seconds under Cycle time option</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP021<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP021-Verify that _Manual_ and _Cycle time_ options are displayed in Stop Qualification drop down</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP022<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP022-Verify that on-click of the _Manual_ option in the list, will display the Stop Quall as Manual</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP028<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP028-Verify that only numbers are accepted in the time field in HH MM SS text boxes for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP025<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP025-Verify that the default value for time is 00 in all the three text boxes for Cycle time</i></td></tr>
+<tr><td>com.vrt.testcases.setup_QualParametersTest.QP026<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>QP026-Verify that max 4 characters are allowed in HH  time fields for Cycle time</i></td></tr>
 </table>
