--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>LoginTest.LOGIN_001()[pri:0, instance:com.vrt.testcases.LoginTest@6b9651f3]<br/>LoginTest.LOGIN_022()[pri:0, instance:com.vrt.testcases.LoginTest@6b9651f3]<br/>LoginTest.LOGIN_001b()[pri:0, instance:com.vrt.testcases.LoginTest@6b9651f3]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression</td><td>setup_QualParametersTest.QP012()[pri:0, instance:com.vrt.testcases.setup_QualParametersTest@3e57cd70]<br/></td></tr>
 </table>
