Policies Page class, Setup-Calculation page class, Setup-Review Page class, Setup-SensorConfig class updated, along with Setup-Calculations Test class & Setup-Review Test class updated

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\SSC\AppData\Local\Temp\testng-eclipse--2088568370\testng-customsuite.xml</span>
+                    <span>C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse-1054002498\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vrt.testcases.setup_QualParametersTest" hash-for-method="QP012">QP012</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vrt.testcases.setup_CalculationTest" hash-for-method="CAL033">CAL033</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,16 +122,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.vrt.testcases.setup_QualParametersTest</span>
+              <span class="class-name">com.vrt.testcases.setup_CalculationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="QP012">
-                  </a> <!-- QP012 -->
-                  <span class="method-name">QP012</span>
+                  <a name="CAL033">
+                  </a> <!-- CAL033 -->
+                  <span class="method-name">CAL033</span>
                   <em>
-(QP012-Verify that 24hr format is accepted in the time HH field for time of the day option)                  </em>
+(CAL033-Verify that the Saturation pressure of steam field will be disabled when there are no temperature sensors defined in the setup)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -139,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\SSC\AppData\Local\Temp\testng-eclipse--2088568370\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse-1054002498\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,11 +148,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.vrt.testcases.setup_QualParametersTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;QP012&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.vrt.testcases.setup_QualParametersTest --&gt;
+      &lt;class name=&quot;com.vrt.testcases.setup_CalculationTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -180,7 +176,7 @@
               <span class="test-group-name">Regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">QP012</span>
+                <span class="method-in-group-name">CAL033</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -202,14 +198,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'QP012')
-data.setCell(0, 2, 'com.vrt.testcases.setup_QualParametersTest')
-data.setCell(0, 3, 7151);
+data.setCell(0, 1, 'CAL033')
+data.setCell(0, 2, 'com.vrt.testcases.setup_CalculationTest')
+data.setCell(0, 3, 28823);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 28 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,148 +220,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">67 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">com.vrt.testcases.setup_QualParametersTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">QP028A</span>
-                <br/>
-                <span class="ignored-method-name">QP030</span>
-                <br/>
-                <span class="ignored-method-name">QP031</span>
-                <br/>
-                <span class="ignored-method-name">QP023</span>
-                <br/>
-                <span class="ignored-method-name">QP016B</span>
-                <br/>
-                <span class="ignored-method-name">QP016C</span>
-                <br/>
-                <span class="ignored-method-name">QP016A</span>
-                <br/>
-                <span class="ignored-method-name">QP032A</span>
-                <br/>
-                <span class="ignored-method-name">QP035</span>
-                <br/>
-                <span class="ignored-method-name">QP032</span>
-                <br/>
-                <span class="ignored-method-name">QP033</span>
-                <br/>
-                <span class="ignored-method-name">QP010_1</span>
-                <br/>
-                <span class="ignored-method-name">QP038</span>
-                <br/>
-                <span class="ignored-method-name">QP039</span>
-                <br/>
-                <span class="ignored-method-name">QP036</span>
-                <br/>
-                <span class="ignored-method-name">QP037</span>
-                <br/>
-                <span class="ignored-method-name">QP002_1</span>
-                <br/>
-                <span class="ignored-method-name">QP041</span>
-                <br/>
-                <span class="ignored-method-name">QP042</span>
-                <br/>
-                <span class="ignored-method-name">QP040</span>
-                <br/>
-                <span class="ignored-method-name">QP034</span>
-                <br/>
-                <span class="ignored-method-name">QP027B</span>
-                <br/>
-                <span class="ignored-method-name">QP027A</span>
-                <br/>
-                <span class="ignored-method-name">QP007</span>
-                <br/>
-                <span class="ignored-method-name">QP046</span>
-                <br/>
-                <span class="ignored-method-name">QP002</span>
-                <br/>
-                <span class="ignored-method-name">QP043</span>
-                <br/>
-                <span class="ignored-method-name">QP044</span>
-                <br/>
-                <span class="ignored-method-name">QP005</span>
-                <br/>
-                <span class="ignored-method-name">QP006</span>
-                <br/>
-                <span class="ignored-method-name">QP047</span>
-                <br/>
-                <span class="ignored-method-name">QP003</span>
-                <br/>
-                <span class="ignored-method-name">QP048</span>
-                <br/>
-                <span class="ignored-method-name">QP004</span>
-                <br/>
-                <span class="ignored-method-name">QP009</span>
-                <br/>
-                <span class="ignored-method-name">QP052</span>
-                <br/>
-                <span class="ignored-method-name">QP018B</span>
-                <br/>
-                <span class="ignored-method-name">QP053</span>
-                <br/>
-                <span class="ignored-method-name">QP045</span>
-                <br/>
-                <span class="ignored-method-name">QP001</span>
-                <br/>
-                <span class="ignored-method-name">QP034A</span>
-                <br/>
-                <span class="ignored-method-name">QP014C</span>
-                <br/>
-                <span class="ignored-method-name">QP014A</span>
-                <br/>
-                <span class="ignored-method-name">QP018C</span>
-                <br/>
-                <span class="ignored-method-name">QP018A</span>
-                <br/>
-                <span class="ignored-method-name">QP014B</span>
-                <br/>
-                <span class="ignored-method-name">QP019</span>
-                <br/>
-                <span class="ignored-method-name">QP030A</span>
-                <br/>
-                <span class="ignored-method-name">QP057</span>
-                <br/>
-                <span class="ignored-method-name">QP013</span>
-                <br/>
-                <span class="ignored-method-name">QP054</span>
-                <br/>
-                <span class="ignored-method-name">QP010</span>
-                <br/>
-                <span class="ignored-method-name">QP011</span>
-                <br/>
-                <span class="ignored-method-name">QP055</span>
-                <br/>
-                <span class="ignored-method-name">QP017</span>
-                <br/>
-                <span class="ignored-method-name">QP058</span>
-                <br/>
-                <span class="ignored-method-name">QP015</span>
-                <br/>
-                <span class="ignored-method-name">QP060</span>
-                <br/>
-                <span class="ignored-method-name">QP020</span>
-                <br/>
-                <span class="ignored-method-name">QP056</span>
-                <br/>
-                <span class="ignored-method-name">QP029</span>
-                <br/>
-                <span class="ignored-method-name">QP024</span>
-                <br/>
-                <span class="ignored-method-name">QP021</span>
-                <br/>
-                <span class="ignored-method-name">QP022</span>
-                <br/>
-                <span class="ignored-method-name">QP028</span>
-                <br/>
-                <span class="ignored-method-name">QP025</span>
-                <br/>
-                <span class="ignored-method-name">QP026</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -374,26 +231,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.vrt.testcases.setup_QualParametersTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.vrt.testcases.setup_CalculationTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">PreSetup</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">Setup</span>
-                <span class="method-start">128 ms</span>
+                <span class="method-start">254 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">QP012</span>
-                <span class="method-start">38087 ms</span>
+                <span class="method-name">CAL033</span>
+                <span class="method-start">43533 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">Teardown([TestResult name=QP012 status=SUCCESS method=setup_QualParametersTest.QP012()[pri:0, instance:com.vr...)</span>
-                <span class="method-start">45241 ms</span>
+                <span class="method-name">Teardown([TestResult name=CAL033 status=SUCCESS method=setup_CalculationTest.CAL033()[pri:0, instance:com.vrt...)</span>
+                <span class="method-start">72358 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">endReport_releaseMomory</span>
-                <span class="method-start">45290 ms</span>
+                <span class="method-start">72430 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
