--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="96e697">  <td>21/07/13 16:41:24</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;setup_QualParametersTest.PreSetup()[pri:0, instance:com.vrt.testcases.setup_QualParametersTest@3e57cd70]">&gt;&gt;PreSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="96e697">  <td>21/07/13 16:41:24</td>   <td>121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;setup_QualParametersTest.Setup()[pri:0, instance:com.vrt.testcases.setup_QualParametersTest@3e57cd70]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="96e697">  <td>21/07/13 16:42:02</td>   <td>38080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="setup_QualParametersTest.QP012()[pri:0, instance:com.vrt.testcases.setup_QualParametersTest@3e57cd70]">QP012</td> 
-  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="96e697">  <td>21/07/13 16:42:09</td>   <td>45236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;setup_QualParametersTest.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.setup_QualParametersTest@3e57cd70]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
-<tr bgcolor="96e697">  <td>21/07/13 16:42:09</td>   <td>45283</td> <td>&nbsp;</td><td title="&lt;&lt;setup_QualParametersTest.endReport_releaseMomory()[pri:0, instance:com.vrt.testcases.setup_QualParametersTest@3e57cd70]">&lt;&lt;endReport_releaseMomory</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1956710488</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>21/07/14 19:31:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;setup_CalculationTest.PreSetup()[pri:0, instance:com.vrt.testcases.setup_CalculationTest@6b9651f3]">&gt;&gt;PreSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>21/07/14 19:31:55</td>   <td>245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;setup_CalculationTest.Setup()[pri:0, instance:com.vrt.testcases.setup_CalculationTest@6b9651f3]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>21/07/14 19:32:38</td>   <td>43524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="setup_CalculationTest.CAL033()[pri:0, instance:com.vrt.testcases.setup_CalculationTest@6b9651f3]">CAL033</td> 
+  <td>main@1946403944</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>21/07/14 19:33:07</td>   <td>72352</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;setup_CalculationTest.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.setup_CalculationTest@6b9651f3]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
+<tr bgcolor="6694f1">  <td>21/07/14 19:33:07</td>   <td>72421</td> <td>&nbsp;</td><td title="&lt;&lt;setup_CalculationTest.endReport_releaseMomory()[pri:0, instance:com.vrt.testcases.setup_CalculationTest@6b9651f3]">&lt;&lt;endReport_releaseMomory</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1946403944</td>   <td></td> </tr>
 </table>
